@@ -6,7 +6,7 @@ require (
 	github.com/stretchr/testify v1.6.1
 	go.elastic.co/apm/module/apmhttp/v2 v2.2.0
 	go.elastic.co/apm/v2 v2.2.0
-	golang.org/x/net v0.0.0-20211015210444-4f30a5c0130f
+	golang.org/x/net v0.0.0-20220225172249-27dd8689420f
 	google.golang.org/grpc v1.17.0
 )
 
