@@ -3,6 +3,10 @@ package apmstreadwayamqp
 import (
 	"context"
 	"fmt"
+	"math/rand"
+	"testing"
+	"time"
+
 	"github.com/streadway/amqp"
 	"github.com/stretchr/testify/assert"
 	"github.com/stretchr/testify/require"
@@ -10,17 +14,15 @@ import (
 	"github.com/valinurovam/garagemq/config"
 	"github.com/valinurovam/garagemq/metrics"
 	"github.com/valinurovam/garagemq/server"
+
 	"go.elastic.co/apm/v2/apmtest"
 	"go.elastic.co/apm/v2/model"
-	"testing"
-	"time"
 )
 
 func TestWrappedChannel_Publish(t *testing.T) {
 	var spans []model.Span
 	_, spans, _ = apmtest.WithTransaction(func(ctx context.Context) {
-		stopFunc := startTestAmqpServer()
-		defer stopFunc()
+		port := startTestAmqpServer3(t)
 
 		initialHeaders := map[string]interface{}{
 			"ela":   "e",
@@ -37,7 +39,7 @@ func TestWrappedChannel_Publish(t *testing.T) {
 
 		//Sleeping is needed for the server to fully init
 		time.Sleep(100 * time.Millisecond)
-		conn, dialErr := amqp.Dial(fmt.Sprintf("amqp://guest:guest@%s:%d/", "0.0.0.0", 1000))
+		conn, dialErr := amqp.Dial(fmt.Sprintf("amqp://guest:guest@%s:%d/", "0.0.0.0", port))
 		require.Nil(t, dialErr)
 		ch, chErr := conn.Channel()
 		require.Nil(t, chErr)
@@ -51,12 +53,20 @@ func TestWrappedChannel_Publish(t *testing.T) {
 		require.True(t, extrOk)
 	})
 	require.Len(t, spans, 1)
+	assert.Equal(t, "RabbitMQ SEND to exch", spans[0].Name)
+	assert.Equal(t, "messaging", spans[0].Type)
+	assert.Equal(t, "rabbitmq", spans[0].Subtype)
+	assert.Equal(t, "success", spans[0].Outcome)
 }
 
-func startTestAmqpServer(t testing.TB) {
+func startTestAmqpServer3(t testing.TB) int {
+	rand.Seed(time.Now().UnixNano())
+	port := rand.Intn((65535 - 1000) + 1000)
 	cfg, _ := config.CreateDefault()
 	metrics.NewTrackRegistry(15, time.Second, false)
-	srv := server.NewServer("0.0.0.0", "1000", amqp2.ProtoRabbit, cfg)
+	srv := server.NewServer("0.0.0.0", fmt.Sprint(port), amqp2.ProtoRabbit, cfg)
+
 	go srv.Start()
 	t.Cleanup(srv.Stop)
+	return port
 }
